--- a/src/routes/homepage/homepage.css
+++ b/src/routes/homepage/homepage.css
@@ -40,6 +40,53 @@
   }
   .right{
     flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .img-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #140e2d;
+      border-radius: 50px;
+      width: 90%;
+      height: 100%;
+
+      .bot {
+        width: 250px;
+        height: 250px;
+        object-fit: contain;
+        animation: botAnimation 3s ease-in-out infinite alternate;
+      }
+    }
   }
 
+  .orbital {
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0.05;
+    animation: rotateOrbital 100s linear infinite;
+    z-index: -1;
+  }
+
+}
+
+@keyframes rotateOrbital {
+  0%{
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(60deg);
+  }
+}
+
+@keyframes botAnimation {
+  0%{
+    transform: scale(1) rotate(0deg);
+  }
+  100% {
+    transform: scale(1.1) rotate(-5deg);
+  }
 }
