--- a/src/routes/homepage/homepage.css
+++ b/src/routes/homepage/homepage.css
@@ -50,8 +50,29 @@
       align-items: center;
       background-color: #140e2d;
       border-radius: 50px;
-      width: 90%;
+      width: 80%;
       height: 100%;
+      position: relative;
+
+      .bg-container {
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        position: absolute;
+        top: 0;
+        left: 0;
+        border-radius: 50px;
+
+        .bg {
+          background-image: url("/bg.png");
+          opacity: 0.2;
+          width: 200%;
+          height: 100%;
+          background-size: auto 100%;
+          animation: slideBg 12s ease-in-out infinite alternate;
+
+        }
+      }
 
       .bot {
         width: 250px;
@@ -88,5 +109,14 @@
   }
   100% {
     transform: scale(1.1) rotate(-5deg);
+  }
+}
+
+@keyframes slideBg {
+  0%{
+    transform: translate(0);
+  }
+  100% {
+    transform: translate(-50%);
   }
 }
