--- a/src/routes/homepage/homepage.css
+++ b/src/routes/homepage/homepage.css
@@ -112,6 +112,29 @@
     z-index: -1;
   }
 
+  .terms {
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+
+    img {
+      width: 16px;
+      height: 16px;
+    }
+
+    .links {
+      display: flex;
+      gap: 10px;
+      color: #888;
+      font-size: 10px;
+    }
+  }
+
 }
 
 @keyframes botAnimation {
