--- a/src/routes/homepage/homepage.css
+++ b/src/routes/homepage/homepage.css
@@ -3,7 +3,12 @@
   display: flex;
   align-items: center;
   gap: 100px;
-  overflow-y: hidden;
+
+  @media screen and (max-width: 481px){
+    flex-direction: column;
+    margin-top: 36px;
+    gap: 64px;
+  }
 
   .left{
     flex: 1;
@@ -20,10 +25,23 @@
       background-clip: text;
       -webkit-background-clip: text;
       color: transparent;
+
+      @media screen and (max-width: 481px){
+        font-size: 42px;
+      }
+    }
+    h2 {
+      @media screen and (max-width: 481px){
+        font-size: 18px;
+      }
     }
     h3{
       font-weight: 400;
       max-width: 80%;
+
+      @media screen and (max-width: 481px){
+        font-size: 14px;
+      }
     }
     a{
       padding: 15px 25px;
@@ -55,6 +73,11 @@
       height: 100%;
       position: relative;
 
+      @media screen and (max-width: 481px){
+        width: 250px;
+        height: 250px;
+      }
+
       .bg-container {
         width: 100%;
         height: 100%;
@@ -79,6 +102,11 @@
         height: 250px;
         object-fit: contain;
         animation: botAnimation 3s ease-in-out infinite alternate;
+
+        @media screen and (max-width: 481px){
+          width: 150px;
+          height: 150px;
+        }
       }
 
       .chat {
@@ -92,11 +120,20 @@
         background-color: #2c2937;
         border-radius: 10px;
 
+        @media screen and (max-width: 481px){
+          padding: 8px;
+        }
+
         img  {
           width: 32px;
           height: 32px;
           border-radius: 50%;
           object-fit: cover;
+
+          @media screen and (max-width: 481px){
+            width: 24px;
+            height: 24px;
+          }
         }
       }
     }
@@ -110,6 +147,11 @@
     left: 0;
     opacity: 0.05;
     z-index: -1;
+
+    @media screen and (max-width: 481px){
+      width: 100%;
+      object-fit: cover;
+    }
   }
 
   .terms {
@@ -121,6 +163,13 @@
     flex-direction: column;
     align-items: center;
     gap: 15px;
+
+    @media screen and (max-width: 481px){
+      position: absolute;
+      bottom: -172px;
+      left: 50%;
+      transform: translateX(-50%);
+    }
 
     img {
       width: 16px;
