--- a/src/layouts/rootLayout/rootLayout.css
+++ b/src/layouts/rootLayout/rootLayout.css
@@ -4,6 +4,10 @@
     display: flex;
     flex-direction: column;
 
+    @media screen and (max-width: 481px){
+        padding: 16px 24px;
+      }
+
     header {
         display: flex;
         justify-content: space-between;
