--- a/src/routes/homepage/homepage.css
+++ b/src/routes/homepage/homepage.css
@@ -1,13 +1,12 @@
 .homepage {
-  height: 100%;
+  height: 80%;
   display: flex;
   align-items: center;
   gap: 100px;
 
   @media screen and (max-width: 481px){
     flex-direction: column;
-    margin-top: 36px;
-    gap: 64px;
+    gap: 0;
   }
 
   .left{
@@ -166,9 +165,10 @@
 
     @media screen and (max-width: 481px){
       position: absolute;
-      bottom: -150px;
+      bottom: 0px;
       left: 50%;
       transform: translateX(-50%);
+      margin-bottom: 24px;
     }
 
     img {
