--- a/src/routes/homepage/homepage.css
+++ b/src/routes/homepage/homepage.css
@@ -165,6 +165,7 @@
     gap: 15px;
 
     @media screen and (max-width: 481px){
+      width: 100%;
       position: absolute;
       bottom: -150px;
       left: 50%;
