--- a/src/components/chatList/chatList.css
+++ b/src/components/chatList/chatList.css
@@ -3,6 +3,10 @@
   flex-direction: column;
   height: 100%;
 
+  a {
+    padding: 5px;
+  }
+
   hr {
     border: none;
     height: 2px;
@@ -14,8 +18,12 @@
 
   .title {
     font-weight: 600;
-    font-size: 10px;
+    font-size: 12px;
     margin-bottom: 10px;
+
+    &:first-child {
+      margin-top: 15px;
+    }
   }
 
   .list {
