--- a/src/components/chatList/chatList.css
+++ b/src/components/chatList/chatList.css
@@ -1,7 +1,6 @@
 .chatList {
   display: flex;
   flex-direction: column;
-  height: 100%;
 
   a {
     padding: 5px;
@@ -31,7 +30,7 @@
     flex-direction: column;
 
     a {
-      padding: 10px;
+      padding: 7px 10px;
       border-radius: 10px;
 
       &:hover {
