--- a/src/layouts/rootLayout/rootLayout.css
+++ b/src/layouts/rootLayout/rootLayout.css
@@ -9,6 +9,11 @@
       }
 
     header {
+        /*position: sticky;
+        top: 0;
+        z-index: 1000;
+        background-color: #0e0c16;
+        padding-block: 10px;*/
         display: flex;
         justify-content: space-between;
         align-items: center;
